STEAM model created

--- a/III Models/3 Model STEAM - FC55569/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
+++ b/III Models/3 Model STEAM - FC55569/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -13,12 +13,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_35860\\526159370.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
@@ -40,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -54,33 +69,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol   DI55102   DI55152  \\\n",
-            "0            0.867508    0.670721     3.354160  1.03026  0.965043  0.924515   \n",
-            "1            0.864729    0.671059     3.306475  1.03026  0.965043  0.924515   \n",
-            "2            0.856391    0.672071     3.163420  1.06326  0.965043  0.924515   \n",
-            "3            0.811652    0.674174     2.238130  1.51850  0.971625  0.933431   \n",
-            "4            0.773793    0.675408     1.391475  1.51850  0.971625  0.933431   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55557  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  66.31395   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  66.31395   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  66.31395   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  65.92560   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  65.92560   \n",
             "\n",
-            "    DI55580   FC55003    FC55009   FC55552   FC55569  FC55576  FFC55553  \\\n",
-            "0  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
-            "1  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
-            "2  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
-            "3  1.015146  5297.320   966.1866  40866.28  6918.194  329.701  1.050092   \n",
-            "4  1.015146  5297.320   966.1866  40866.28  6918.194  329.701  1.050092   \n",
+            "    LC55568    LC90366   LC90368   PI55004   PI55020   TC55552   TC55555  \\\n",
+            "0  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "1  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "2  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "3  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
+            "4  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
             "\n",
-            "   FFC55555   LC52572   LC55553   LC55557   LC55568    LC90366   LC90368  \\\n",
-            "0  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
-            "1  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
-            "2  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
-            "3  0.764579  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306   \n",
-            "4  0.764579  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306   \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "    PI55004   PI55020   TC55552   TC55555   TI40050   TI55021  \n",
-            "0  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
-            "1  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
-            "2  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
-            "3  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  \n",
-            "4  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  \n"
+            "[5 rows x 33 columns]\n"
           ]
         }
       ],
@@ -93,14 +103,14 @@
         "# # Concatenate (union) the dataframes\n",
         "# df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
         "\n",
-        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\3 Feature Selection\\filtered-out_5-9_corr.csv')\n",
+        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model STEAM - FC55569\\3 Feature Selection\\filtered-out_5-9_corr.csv')\n",
         "\n",
         "print(df_All.head())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -112,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -121,53 +131,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
-        "\n",
         "# # List of columns to exclude to run XGboost feature selection\n",
-        "# exclude_columns = ['Octanol', 'Hexanol',\n",
-        "#        'Ethanol', 'Decanol',\n",
-        "       \n",
-        "#        'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016', 'TI55017', 'TI55023',\n",
-        "#        # , 'TI55021'\n",
-        "\n",
-        "#        'TC52015', 'FC52018', 'II52554', 'TI40050', 'VI52558B'\n",
-        "\n",
-        "#        # 'FC55102', 'FC55152', 'LC55557', 'LC55568', 'TC55555',\n",
-        "\n",
-        "#        # '425 SAO Al', 'FFC55553', 'LC52572', 'LC90366',\n",
-        "\n",
-        "#        # 'FC42428', 'LC55553',\n",
-        "\n",
-        "#        # 'FC55009'\n",
-        "#                    ]\n",
+        "exclude_columns = [ # OLS and SFS agree on these:\n",
+        "                    'M_Value',\n",
+        "                    'HydWtr_pct_Ammonia',\n",
+        "                    'HydWtr_Na2O'\n",
+        "                   ]\n",
         "\n",
         "# # Create a new DataFrame without the excluded columnsd\n",
-        "# df_All = df_All.drop(columns=exclude_columns)"
+        "df_All = df_All.drop(columns=exclude_columns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Decanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55009', 'FC55552', 'FC55569',\n",
-              "       'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557',\n",
-              "       'LC55568', 'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552',\n",
-              "       'TC55555', 'TI40050', 'TI55021'],\n",
+              "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
+              "       'Butanol', 'Decanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003',\n",
+              "       'FC55009', 'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555',\n",
+              "       'LC52572', 'LC55553', 'LC55557', 'LC55568', 'LC90366', 'LC90368',\n",
+              "       'PI55004', 'PI55020', 'TC55552', 'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -178,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -190,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -228,7 +223,7 @@
         "    return results\n",
         "\n",
         "\n",
-        "results = iterate_feature_rotations(df_All, 'Decanol')\n",
+        "results = iterate_feature_rotations(df_All, 'FC55569')\n",
         "\n",
         "# Convert results to a DataFrame\n",
         "flattened_results = []\n",
@@ -245,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -253,32 +248,32 @@
           "output_type": "stream",
           "text": [
             "                                        Feature Rotation     Feature  \\\n",
-            "0      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...  425_pct_Al   \n",
-            "1      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     LC55553   \n",
-            "2      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     FC55576   \n",
-            "3      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     FC55003   \n",
-            "4      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     LC90368   \n",
+            "0      [425_pct_Al, LC55553, FC55576, FC55003, TI5502...  425_pct_Al   \n",
+            "1      [425_pct_Al, LC55553, FC55576, FC55003, TI5502...     LC55553   \n",
+            "2      [425_pct_Al, LC55553, FC55576, FC55003, TI5502...     FC55576   \n",
+            "3      [425_pct_Al, LC55553, FC55576, FC55003, TI5502...     FC55003   \n",
+            "4      [425_pct_Al, LC55553, FC55576, FC55003, TI5502...     TI55021   \n",
             "...                                                  ...         ...   \n",
-            "26995  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     LC90368   \n",
-            "26996  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     DI55580   \n",
-            "26997  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...  C4_pct_Hex   \n",
-            "26998  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     LC55568   \n",
-            "26999  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     TC55552   \n",
+            "23515  [TI55021, PI55020, LC90368, FC55009, TC55555, ...       Al2O3   \n",
+            "23516  [TI55021, PI55020, LC90368, FC55009, TC55555, ...  425_pct_Al   \n",
+            "23517  [TI55021, PI55020, LC90368, FC55009, TC55555, ...     DI55580   \n",
+            "23518  [TI55021, PI55020, LC90368, FC55009, TC55555, ...     DI55102   \n",
+            "23519  [TI55021, PI55020, LC90368, FC55009, TC55555, ...     FC55003   \n",
             "\n",
             "       Importance  \n",
-            "0           416.0  \n",
-            "1           178.0  \n",
-            "2           226.0  \n",
-            "3           211.0  \n",
-            "4           200.0  \n",
+            "0           365.0  \n",
+            "1           224.0  \n",
+            "2           419.0  \n",
+            "3           275.0  \n",
+            "4           190.0  \n",
             "...           ...  \n",
-            "26995       160.0  \n",
-            "26996       141.0  \n",
-            "26997       157.0  \n",
-            "26998       105.0  \n",
-            "26999       183.0  \n",
+            "23515       227.0  \n",
+            "23516       160.0  \n",
+            "23517       175.0  \n",
+            "23518       191.0  \n",
+            "23519       219.0  \n",
             "\n",
-            "[27000 rows x 3 columns]\n"
+            "[23520 rows x 3 columns]\n"
           ]
         }
       ],
@@ -288,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -312,51 +307,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "               Feature  Average Importance                Description\n",
-            "0          HydWtr_Na2O          235.287778                        NaN\n",
-            "1              FC55009          219.400000    STM TO PA-551  RING HTR\n",
-            "2   HydWtr_pct_Ammonia          214.872222                        NaN\n",
-            "3              DI55152          214.847778     2ND STG SEPR TO FA-560\n",
-            "4              TC55552          213.675556   DC-551 ALKOX  FD PREHEAT\n",
-            "5           C4_pct_H2O          202.543333                        NaN\n",
-            "6              M_Value          201.976667                        NaN\n",
-            "7              DI55102          199.338889           HYDROL RX OUTLET\n",
-            "8              FC55552          190.743333   ALK FD TO HYDR RX DC-551\n",
-            "9           425_pct_Al          189.736667                        NaN\n",
-            "10            FFC55553          187.785556   DC551 H2O/ALKOXIDE RATIO\n",
-            "11          C4_pct_Hex          187.164444                        NaN\n",
-            "12          C4_pct_Eth          181.865556                        NaN\n",
-            "13             PI55020          180.848889        DA-554 TOP PRESSURE\n",
-            "14             LC90366          180.133333         FB-657 SAO STORAGE\n",
-            "15             LC90368          179.692222       FB-658 ALKOXIDE TANK\n",
-            "16             FC55569          172.470000     30# STM TO C4 STRIPPER\n",
-            "17             TI55021          171.256667             STEAM TO DA554\n",
-            "18             FC55003          167.426667   DA-551 O/H H2O TO DC-551\n",
-            "19             LC52572          165.330000   FB-554 SLURRY SURGE TANK\n",
-            "20             DI55580          163.997778   DA-554 BTMS SLURRY TO EX\n",
-            "21             FC55576          161.040000   CONDENSATE TO DESUPERHTR\n",
-            "22             PI55004          156.968889     DA-554 BOTTOM PRESSURE\n",
-            "23            FFC55555          154.924444   RECYC BUT/ALKOX FD RATIO\n",
-            "24             TI40050          153.204444  CLARK AIR COMP INLET TEMP\n",
-            "25             TC55555          153.172222        EA-552 OUT  RECY C4\n",
-            "26             LC55568          129.593333    DA-554 C4 STRPR BOTTOMS\n",
-            "27             LC55557          127.490000        FA-554 SLURRY LEVEL\n",
-            "28               Al2O3          125.623333                        NaN\n",
-            "29             LC55553          117.590000   DC551 HYDR RX SLURRY LEV\n"
+            "       Feature  Average Importance                Description\n",
+            "0      FC55576          365.436905   CONDENSATE TO DESUPERHTR\n",
+            "1   C4_pct_H2O          245.388095                        NaN\n",
+            "2      FC55003          243.525000   DA-551 O/H H2O TO DC-551\n",
+            "3        Al2O3          239.841667                        NaN\n",
+            "4   C4_pct_Eth          238.179762                        NaN\n",
+            "5   C4_pct_Hex          223.515476                        NaN\n",
+            "6      DI55102          216.948810           HYDROL RX OUTLET\n",
+            "7      DI55152          205.725000     2ND STG SEPR TO FA-560\n",
+            "8      DI55580          200.254762   DA-554 BTMS SLURRY TO EX\n",
+            "9      PI55020          197.004762        DA-554 TOP PRESSURE\n",
+            "10    FFC55553          193.146429   DC551 H2O/ALKOXIDE RATIO\n",
+            "11     TI40050          192.859524  CLARK AIR COMP INLET TEMP\n",
+            "12     LC90368          190.553571       FB-658 ALKOXIDE TANK\n",
+            "13  425_pct_Al          189.488095                        NaN\n",
+            "14     TC55552          188.648810   DC-551 ALKOX  FD PREHEAT\n",
+            "15     LC90366          182.675000         FB-657 SAO STORAGE\n",
+            "16     TC55555          175.070238        EA-552 OUT  RECY C4\n",
+            "17     FC55552          173.334524   ALK FD TO HYDR RX DC-551\n",
+            "18     FC55009          171.033333    STM TO PA-551  RING HTR\n",
+            "19     TI55021          170.471429             STEAM TO DA554\n",
+            "20     Butanol          168.314286                        NaN\n",
+            "21    FFC55555          167.792857   RECYC BUT/ALKOX FD RATIO\n",
+            "22     PI55004          164.311905     DA-554 BOTTOM PRESSURE\n",
+            "23     Decanol          159.301190                        NaN\n",
+            "24     LC55557          153.946429        FA-554 SLURRY LEVEL\n",
+            "25     LC55553          153.202381   DC551 HYDR RX SLURRY LEV\n",
+            "26     LC52572          145.596429   FB-554 SLURRY SURGE TANK\n",
+            "27     LC55568          137.433333    DA-554 C4 STRPR BOTTOMS\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_53808\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_35860\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -383,14 +376,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 03:35:44.918402\n"
+            "2024-05-05 20:50:31.206362\n"
           ]
         }
       ],
