--- a/III Models/3 Model STEAM - FC55569/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/III Models/3 Model STEAM - FC55569/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_21752\\1304120184.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_39036\\1304120184.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -56,20 +56,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "# # Importing CSV files\n",
         "# bordeCode directory\n",
-        "df_CDunit = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\5 Preprocessing - Slecected Features\\Continuous Data\\cont_unitData_clean.csv')\n",
-        "df_AlCon = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\5 Preprocessing - Slecected Features\\Continuous Data\\cont_425Data_clean.csv')\n",
-        "df_FB554 = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\5 Preprocessing - Slecected Features\\Continuous Data\\cont_554Data_clean.csv')\n"
+        "df_CDunit = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model STEAM - FC55569\\5 Preprocessing - Slecected Features\\Continuous Data\\cont_unitData_clean.csv')\n",
+        "df_AlCon = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model STEAM - FC55569\\5 Preprocessing - Slecected Features\\Continuous Data\\cont_425Data_clean.csv')\n",
+        "df_FB554 = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model STEAM - FC55569\\5 Preprocessing - Slecected Features\\Continuous Data\\cont_554Data_clean.csv')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -79,63 +79,53 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "            DI55102       DI55152       FC55003       FC55009       FC55552  \\\n",
-            "count  53027.000000  53027.000000  53027.000000  53027.000000  53027.000000   \n",
-            "mean       0.944303      0.932747   5965.061647    849.267291  35923.727411   \n",
-            "std        0.053360      0.030279    873.852122    616.121897   5005.788686   \n",
-            "min        0.800002      0.836038   2755.480000      0.000000  18005.000000   \n",
-            "25%        0.910721      0.912076   5443.945000    296.416000  34947.100000   \n",
-            "50%        0.950220      0.932556   5988.890000    838.219000  37956.500000   \n",
-            "75%        0.984479      0.952472   6539.060000   1333.465000  39021.300000   \n",
-            "max        1.106550      1.025180   9181.490000   2674.790000  52000.000000   \n",
+            "            DI55102       DI55152       DI55580       FC55003       FC55569  \\\n",
+            "count  54561.000000  54561.000000  54561.000000  54561.000000  54561.000000   \n",
+            "mean       0.943464      0.933740      0.999659   5997.874173   6619.660036   \n",
+            "std        0.054314      0.030442      0.049659    929.965928    459.648371   \n",
+            "min        0.800002      0.835069      0.848476    876.652000   3427.400000   \n",
+            "25%        0.909271      0.913437      0.967906   5468.260000   6359.960000   \n",
+            "50%        0.949199      0.933843      0.998969   6017.820000   6586.370000   \n",
+            "75%        0.984290      0.953282      1.034240   6578.150000   6834.760000   \n",
+            "max        1.062800      1.031740      1.144600  10609.000000  10171.500000   \n",
             "\n",
-            "            FC55569       FC55576      FFC55555       LC90366       LC90368  \\\n",
-            "count  53027.000000  53027.000000  53027.000000  53027.000000  53027.000000   \n",
-            "mean    6596.355555    376.921990      0.772128     46.103877     36.783914   \n",
-            "std      389.413386    258.768936      0.022740     28.964180     20.138593   \n",
-            "min     5123.870000      0.000000      0.689689      0.000000      0.006367   \n",
-            "25%     6359.775000    199.181500      0.758317     20.914450     20.694250   \n",
-            "50%     6577.060000    345.814000      0.773698     47.213100     42.069400   \n",
-            "75%     6810.550000    561.441000      0.788256     76.966300     51.962850   \n",
-            "max     8112.930000   1150.200000      0.854226     87.901600     81.210800   \n",
+            "            FC55576      FFC55555       LC90366       PI55020       TI40050  \\\n",
+            "count  54561.000000  54561.000000  54561.000000  54561.000000  54561.000000   \n",
+            "mean     368.304281      0.772163     45.988848     -1.442503     73.095826   \n",
+            "std      253.894618      0.024718     29.087032      1.147927     15.208337   \n",
+            "min        0.000000      0.213109      0.000000     -5.012500     27.533700   \n",
+            "25%      192.303000      0.758564     20.174500     -2.327720     62.597500   \n",
+            "50%      342.637000      0.773306     47.182900     -1.421400     76.299800   \n",
+            "75%      543.420000      0.788541     77.046100     -0.418453     84.557900   \n",
+            "max     1132.440000      0.998409     87.901600      2.236610    118.700000   \n",
             "\n",
-            "            PI55004       PI55020       TC55552       TI55021  \n",
-            "count  53027.000000  53027.000000  53027.000000  53027.000000  \n",
-            "mean       2.178256     -1.466144    168.885993    223.009729  \n",
-            "std        1.176422      1.130865     15.309291      9.712883  \n",
-            "min        0.001366     -4.856830    120.095000    203.525000  \n",
-            "25%        1.254095     -2.340425    155.850000    217.508000  \n",
-            "50%        1.907760     -1.446300    172.838000    220.246000  \n",
-            "75%        2.972360     -0.450221    181.022000    223.843000  \n",
-            "max        6.246540      2.030470    202.625000    258.133000  \n",
-            "         425_pct_Al    C4_pct_Eth    C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "count  53027.000000  53027.000000  53027.000000        53027.000000   \n",
-            "mean       6.143957      1.229628     21.238209            0.970185   \n",
-            "std        0.256678      0.733113      2.725474            0.151464   \n",
-            "min        5.165900      0.080310      7.667200            0.373360   \n",
-            "25%        6.003590      0.625711     18.932350            0.877254   \n",
-            "50%        6.138070      1.104550     21.520500            0.941828   \n",
-            "75%        6.285380      1.688645     23.298100            1.034630   \n",
-            "max        7.136170      9.844330     35.204300            1.605960   \n",
-            "\n",
-            "        HydWtr_Na2O  \n",
-            "count  53027.000000  \n",
-            "mean       0.816009  \n",
-            "std        0.710180  \n",
-            "min        0.000000  \n",
-            "25%        0.453602  \n",
-            "50%        0.666588  \n",
-            "75%        0.985669  \n",
-            "max       12.750600  \n",
-            "            Decanol\n",
-            "count  53027.000000\n",
-            "mean       3.171270\n",
-            "std        1.651904\n",
+            "            TI55021  \n",
+            "count  54561.000000  \n",
+            "mean     223.764506  \n",
+            "std       11.267038  \n",
+            "min      150.495000  \n",
+            "25%      217.452000  \n",
+            "50%      220.366000  \n",
+            "75%      224.428000  \n",
+            "max      298.351000  \n",
+            "         425_pct_Al         Al2O3    C4_pct_Eth    C4_pct_H2O    C4_pct_Hex\n",
+            "count  54561.000000  54561.000000  54561.000000  54561.000000  54561.000000\n",
+            "mean       6.156552     11.354136      1.252715     21.164006      0.458286\n",
+            "std        0.274426      0.591839      0.799271      2.771817      0.237698\n",
+            "min        4.815620      9.541520      0.009510      8.258290      0.000060\n",
+            "25%        6.009700     11.069600      0.630762     18.797400      0.338534\n",
+            "50%        6.148420     11.487300      1.134980     21.392100      0.437896\n",
+            "75%        6.306480     11.715900      1.693370     23.305300      0.538039\n",
+            "max        7.436160     12.880700     11.355000     34.605000      3.053900\n",
+            "            Butanol\n",
+            "count  54561.000000\n",
+            "mean       9.873995\n",
+            "std       10.573901\n",
             "min        0.000000\n",
-            "25%        1.893295\n",
-            "50%        3.036670\n",
-            "75%        4.213330\n",
-            "max        8.510120\n"
+            "25%        3.780000\n",
+            "50%        5.833330\n",
+            "75%       10.896700\n",
+            "max       61.840000\n"
           ]
         }
       ],
@@ -147,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -200,20 +190,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Date', 'DI55102', 'DI55152', 'FC55003', 'FC55009', 'FC55552',\n",
-            "       'FC55569', 'FC55576', 'FFC55555', 'LC90366', 'LC90368', 'PI55004',\n",
-            "       'PI55020', 'TC55552', 'TI55021'],\n",
+            "Index(['Date', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569',\n",
+            "       'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021'],\n",
             "      dtype='object')\n",
-            "Index(['Date', 'Decanol'], dtype='object')\n",
-            "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-            "       'HydWtr_Na2O'],\n",
+            "Index(['Date', 'Butanol'], dtype='object')\n",
+            "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+            "       'C4_pct_Hex'],\n",
             "      dtype='object')\n"
           ]
         }
@@ -226,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -247,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -275,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -294,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -339,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -361,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -387,40 +376,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                 Date  425_pct_Al  C4_pct_Eth  C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "0 2012-05-14 07:00:00     6.26763    2.353670    21.66280            0.519068   \n",
-            "1 2012-05-14 08:00:00     6.26798    2.355025    21.66545            0.553096   \n",
-            "2 2012-05-14 09:00:00     6.26868    2.357740    21.67070            0.621152   \n",
-            "3 2012-05-14 10:00:00     6.26938    2.360455    21.67595            0.667952   \n",
-            "4 2012-05-14 11:00:00     6.27008    2.363170    21.68125            0.693497   \n",
+            "                 Date  425_pct_Al     Al2O3  C4_pct_Eth  C4_pct_H2O  \\\n",
+            "0 2012-05-13 17:00:00    6.257800  11.85580    2.315660    21.58900   \n",
+            "1 2012-05-13 18:00:00    6.258150  11.87625    2.317015    21.59160   \n",
+            "2 2012-05-13 19:00:00    6.258850  11.91710    2.319730    21.59685   \n",
+            "3 2012-05-13 20:00:00    6.259555  11.95790    2.322445    21.60215   \n",
+            "4 2012-05-13 21:00:00    6.260260  11.99875    2.325160    21.60745   \n",
             "\n",
-            "   HydWtr_Na2O   Decanol   DI55102   DI55152      FC55003    FC55009  \\\n",
-            "0     1.088680  0.959336  0.966831  0.938799  6332.030000  2512.3700   \n",
-            "1     1.084100  0.959336  0.966831  0.938799  6332.030000  2512.3700   \n",
-            "2     1.074945  0.959336  0.966831  0.938799  6332.030000  2512.3700   \n",
-            "3     1.065790  0.933602  0.965900  0.937601  6191.103333  2329.9600   \n",
-            "4     1.056635  0.907868  0.967110  0.938748  6081.507500  2202.0825   \n",
+            "   C4_pct_Hex    Butanol   DI55102   DI55152   DI55580      FC55003  \\\n",
+            "0    0.611370  57.958400  0.975939  0.949229  1.032360  6570.240000   \n",
+            "1    0.611707  57.958400  0.975939  0.949229  1.032360  6570.240000   \n",
+            "2    0.612382  57.958400  0.975939  0.949229  1.032360  6570.240000   \n",
+            "3    0.613056  54.875500  0.975904  0.948656  1.032043  6634.436667   \n",
+            "4    0.613730  51.792567  0.975875  0.948095  1.031655  6694.237500   \n",
             "\n",
-            "        FC55552      FC55569     FC55576  FFC55555    LC90366    LC90368  \\\n",
-            "0  41080.000000  6432.660000  386.948500  0.749378  82.124700  60.124100   \n",
-            "1  41080.000000  6432.660000  386.948500  0.749378  82.124700  60.124100   \n",
-            "2  41080.000000  6432.660000  386.948500  0.749378  82.124700  60.124100   \n",
-            "3  40980.433333  6438.553333  391.853667  0.749920  82.121367  60.174033   \n",
-            "4  40679.700000  6438.767500  387.162250  0.750051  82.119700  60.230450   \n",
-            "\n",
-            "    PI55004   PI55020    TC55552     TI55021  \n",
-            "0  0.621513  0.013269  146.99950  215.650000  \n",
-            "1  0.621513  0.013269  146.99950  215.650000  \n",
-            "2  0.621513  0.013269  146.99950  215.650000  \n",
-            "3  0.740749  0.018791  148.86200  215.774333  \n",
-            "4  0.897834 -0.021408  150.50375  215.404500  \n"
+            "       FC55569    FC55576  FFC55555  LC90366   PI55020    TI40050     TI55021  \n",
+            "0  6465.030000  334.73200  0.748898  82.1746 -0.350805  83.248300  213.937000  \n",
+            "1  6465.030000  334.73200  0.748898  82.1746 -0.350805  83.248300  213.937000  \n",
+            "2  6465.030000  334.73200  0.748898  82.1746 -0.350805  83.248300  213.937000  \n",
+            "3  6465.943333  336.82900  0.749250  82.1746 -0.413804  81.575367  213.706333  \n",
+            "4  6466.167500  335.50075  0.749331  82.1746 -0.440142  80.006075  213.401250  \n"
           ]
         }
       ],
@@ -436,20 +418,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-              "       'HydWtr_Na2O', 'Decanol', 'DI55102', 'DI55152', 'FC55003', 'FC55009',\n",
-              "       'FC55552', 'FC55569', 'FC55576', 'FFC55555', 'LC90366', 'LC90368',\n",
-              "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
+              "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
+              "       'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569',\n",
+              "       'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -460,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -470,19 +451,19 @@
         "# Save DataFrame to CSV file in the same directory as the Jupyter Notebook\n",
         "# df_CD.to_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\contData_all.csv', index=False)            \n",
         "\n",
-        "final_dataset.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\5 Preprocessing - Slecected Features\\Merge Data\\merged_data.csv', index=False)\n"
+        "final_dataset.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model STEAM - FC55569\\5 Preprocessing - Slecected Features\\Merge Data\\merged_data.csv', index=False)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-25 15:00:39.848747\n"
+            "2024-05-05 22:36:31.936015\n"
           ]
         }
       ],
