--- a/III Models/3 Model STEAM - FC55569/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
+++ b/III Models/3 Model STEAM - FC55569/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_39412\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -69,26 +69,26 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55557  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  66.31395   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  66.31395   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  66.31395   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  65.92560   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  65.92560   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "    LC55568    LC90366   LC90368   PI55004   PI55020   TC55552   TC55555  \\\n",
+            "0  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "1  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "2  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "3  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
+            "4  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
             "[5 rows x 33 columns]\n"
           ]
@@ -100,7 +100,7 @@
         "# # Concatenate (union) the dataframes\n",
         "# df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
         "\n",
-        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\3 Feature Selection\\filtered-out_5-9_corr.csv')\n",
+        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model STEAM - FC55569\\3 Feature Selection\\filtered-out_5-9_corr.csv')\n",
         "print(df_All.head())\n",
         "\n",
         "df_TagDesc = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\Not for Processing\\TagDesc.csv')\n"
@@ -158,27 +158,18 @@
       "outputs": [],
       "source": [
         "# # List of columns to exclude to run XGboost feature selection\n",
-        "exclude_columns = [\n",
-        "                'TI40050',\n",
-        "                'TC55555',\n",
-        "                'LC55568',\n",
-        "                'LC55557',\n",
-        "                'Al2O3',\n",
-        "                'LC55553',\n",
+        "exclude_columns = [ # OLS and SFS agree on these:\n",
+        "                    'M_Value',\n",
+        "                    'HydWtr_pct_Ammonia',\n",
+        "                    'HydWtr_Na2O',\n",
         "\n",
-        "        # 'Octanol', 'Hexanol',\n",
-        "#        'Ethanol', 'Decanol',\n",
-        "       \n",
-        "#        'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016', 'TI55017', 'TI55021', 'TI55023',\n",
-        "#        'TC52015', 'FC52018', 'II52554', 'TI40050', 'VI52558B'\n",
-        "\n",
-        "#        # 'FC55102', 'FC55152', 'LC55557', 'LC55568', 'TC55555',\n",
-        "\n",
-        "#        # '425 SAO Al', 'FFC55553', 'LC52572', 'LC90366',\n",
-        "\n",
-        "#        # 'FC42428', 'LC55553',\n",
-        "\n",
-        "#        # 'FC55009'\n",
+        "                    'PI55004',\n",
+        "                    'Decanol',\n",
+        "                    'LC55557',\n",
+        "                    'LC52572',\n",
+        "                    'LC55568',\n",
+        "                    'LC90368',\n",
+        "                    'LC55553'\n",
         "                   ]\n",
         "\n",
         "# # Create a new DataFrame without the excluded columnsd\n",
@@ -193,11 +184,10 @@
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
-              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55557', 'LC90366', 'LC90368',\n",
-              "       'TC55552'],\n",
+              "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
+              "       'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55009',\n",
+              "       'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC90366',\n",
+              "       'PI55020', 'TC55552', 'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
@@ -262,7 +252,7 @@
         "    return results\n",
         "\n",
         "\n",
-        "results = iterate_feature_rotations(df_All, 'Decanol')\n",
+        "results = iterate_feature_rotations(df_All, 'FC55569')\n",
         "\n",
         "# Convert results to a DataFrame\n",
         "flattened_results = []\n",
@@ -286,33 +276,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                        Feature Rotation             Feature  \\\n",
-            "0      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          425_pct_Al   \n",
-            "1      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...             LC90368   \n",
-            "2      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          C4_pct_Hex   \n",
-            "3      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...            FFC55553   \n",
-            "4      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...  HydWtr_pct_Ammonia   \n",
-            "...                                                  ...                 ...   \n",
-            "14515  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             DI55102   \n",
-            "14516  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...            FFC55555   \n",
-            "14517  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             FC55569   \n",
-            "14518  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...          C4_pct_Hex   \n",
-            "14519  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...               Al2O3   \n",
+            "                                        Feature Rotation     Feature  \\\n",
+            "0      [425_pct_Al, TI55021, DI55102, LC90366, Butano...  425_pct_Al   \n",
+            "1      [425_pct_Al, TI55021, DI55102, LC90366, Butano...     TI55021   \n",
+            "2      [425_pct_Al, TI55021, DI55102, LC90366, Butano...     DI55102   \n",
+            "3      [425_pct_Al, TI55021, DI55102, LC90366, Butano...     LC90366   \n",
+            "4      [425_pct_Al, TI55021, DI55102, LC90366, Butano...     Butanol   \n",
+            "...                                                  ...         ...   \n",
+            "13225  [TI55021, C4_pct_Hex, FC55003, DI55152, TC5555...  425_pct_Al   \n",
+            "13226  [TI55021, C4_pct_Hex, FC55003, DI55152, TC5555...     TC55555   \n",
+            "13227  [TI55021, C4_pct_Hex, FC55003, DI55152, TC5555...     FC55552   \n",
+            "13228  [TI55021, C4_pct_Hex, FC55003, DI55152, TC5555...  C4_pct_H2O   \n",
+            "13229  [TI55021, C4_pct_Hex, FC55003, DI55152, TC5555...     LC90366   \n",
             "\n",
             "       Importance  \n",
-            "0           507.0  \n",
-            "1           340.0  \n",
-            "2           243.0  \n",
-            "3           250.0  \n",
-            "4           312.0  \n",
+            "0           439.0  \n",
+            "1           329.0  \n",
+            "2           334.0  \n",
+            "3           267.0  \n",
+            "4           248.0  \n",
             "...           ...  \n",
-            "14515       197.0  \n",
-            "14516       187.0  \n",
-            "14517       193.0  \n",
-            "14518       166.0  \n",
-            "14519       192.0  \n",
+            "13225       234.0  \n",
+            "13226       185.0  \n",
+            "13227       165.0  \n",
+            "13228       272.0  \n",
+            "13229       221.0  \n",
             "\n",
-            "[14520 rows x 3 columns]\n"
+            "[13230 rows x 3 columns]\n"
           ]
         }
       ],
@@ -353,36 +343,35 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "               Feature  Average Importance               Description\n",
-            "0   HydWtr_pct_Ammonia          284.618182                       NaN\n",
-            "1              TC55552          276.412121  DC-551 ALKOX  FD PREHEAT\n",
-            "2          HydWtr_Na2O          266.648485                       NaN\n",
-            "3           C4_pct_H2O          256.862121                       NaN\n",
-            "4              FC55552          255.525758  ALK FD TO HYDR RX DC-551\n",
-            "5           C4_pct_Eth          253.631818                       NaN\n",
-            "6              LC90368          249.543939      FB-658 ALKOXIDE TANK\n",
-            "7              FC55003          246.583333  DA-551 O/H H2O TO DC-551\n",
-            "8              DI55152          245.648485    2ND STG SEPR TO FA-560\n",
-            "9           425_pct_Al          239.277273                       NaN\n",
-            "10             LC55557          238.777273       FA-554 SLURRY LEVEL\n",
-            "11             FC55576          236.889394  CONDENSATE TO DESUPERHTR\n",
-            "12             DI55102          235.024242          HYDROL RX OUTLET\n",
-            "13             FC55569          234.300000    30# STM TO C4 STRIPPER\n",
-            "14             LC90366          234.178788        FB-657 SAO STORAGE\n",
-            "15            FFC55555          225.686364  RECYC BUT/ALKOX FD RATIO\n",
-            "16             M_Value          223.860606                       NaN\n",
-            "17            FFC55553          214.578788  DC551 H2O/ALKOXIDE RATIO\n",
-            "18             DI55580          213.721212  DA-554 BTMS SLURRY TO EX\n",
-            "19               Al2O3          209.865152                       NaN\n",
-            "20          C4_pct_Hex          205.965152                       NaN\n",
-            "21             LC52572          203.401515  FB-554 SLURRY SURGE TANK\n"
+            "       Feature  Average Importance                Description\n",
+            "0      FC55576          414.388889   CONDENSATE TO DESUPERHTR\n",
+            "1        Al2O3          339.468254                        NaN\n",
+            "2   C4_pct_H2O          305.260317                        NaN\n",
+            "3      PI55020          295.755556        DA-554 TOP PRESSURE\n",
+            "4   C4_pct_Eth          293.920635                        NaN\n",
+            "5      DI55152          286.588889     2ND STG SEPR TO FA-560\n",
+            "6      DI55580          281.053968   DA-554 BTMS SLURRY TO EX\n",
+            "7      DI55102          278.561905           HYDROL RX OUTLET\n",
+            "8      FC55003          268.368254   DA-551 O/H H2O TO DC-551\n",
+            "9   425_pct_Al          266.004762                        NaN\n",
+            "10  C4_pct_Hex          264.304762                        NaN\n",
+            "11     TI55021          254.493651             STEAM TO DA554\n",
+            "12     LC90366          250.598413         FB-657 SAO STORAGE\n",
+            "13     TI40050          250.436508  CLARK AIR COMP INLET TEMP\n",
+            "14    FFC55555          246.453968   RECYC BUT/ALKOX FD RATIO\n",
+            "15     Butanol          239.771429                        NaN\n",
+            "16    FFC55553          239.255556   DC551 H2O/ALKOXIDE RATIO\n",
+            "17     TC55552          229.846032   DC-551 ALKOX  FD PREHEAT\n",
+            "18     FC55009          213.082540    STM TO PA-551  RING HTR\n",
+            "19     TC55555          212.684127        EA-552 OUT  RECY C4\n",
+            "20     FC55552          199.701587   ALK FD TO HYDR RX DC-551\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_39412\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -416,7 +405,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-20 23:50:22.650111\n"
+            "2024-05-05 21:06:04.297180\n"
           ]
         }
       ],
